# tda-test

./: .gitignore  README.org  _quarto.yml  main.qmd  pyproject.toml
docs/: index.html
docs/main_files/libs/bootstrap/: bootstrap-770c8e9acde89d2309ecfa54b7d9ba80.min.css
