[project]
name = "tda-test"
version = "0.1.0"
readme = "README.org"
requires-python = ">=3.11"
dependencies = [
    "matplotlib",
    "numpy",
    "giotto-tda==0.6.2",
    "plotly>=6.7.0",
    "tornado>=6.5.5",
    "scikit-learn>=1.3.2",
    "kaleido>=1.3.0",
    "jupyter>=1.1.1",
    "seaborn>=0.13.2",
]
